force-app/main/default/objects/IT_ABI_CAB__c/IT_ABI_CAB__c.object-meta.xml
<CustomObject>
    <label>ABI/CAB</label>
    <nameField>
        <label>ABI/CAB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ABI/CAB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>