force-app/main/default/objects/IT_ABI_CAB__c/fields/IT_AbiCab__c.field-meta.xml
<CustomField>
    <fullName>IT_AbiCab__c</fullName>
    <externalId>true</externalId>
    <label>AbiCab</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>