force-app/main/default/objects/IT_ABI_CAB__c/fields/IT_Bank__c.field-meta.xml
<CustomField>
    <fullName>IT_Bank__c</fullName>
    <label>Bank</label>
    <length>80</length>
    <type>Text</type>
</CustomField>