force-app/main/default/objects/IT_ABI_CAB__c/fields/IT_Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>IT_Bank_Address__c</fullName>
    <label>Bank Address</label>
    <length>60</length>
    <type>Text</type>
</CustomField>