force-app/main/default/objects/IT_ABI_CAB__c/fields/IT_Bank_CAP__c.field-meta.xml
<CustomField>
    <fullName>IT_Bank_CAP__c</fullName>
    <label>Bank CAP</label>
    <length>5</length>
    <type>Text</type>
</CustomField>