force-app/main/default/objects/IT_ABI_CAB__c/fields/IT_Bank_City__c.field-meta.xml
<CustomField>
    <fullName>IT_Bank_City__c</fullName>
    <label>Bank City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>