force-app/main/default/objects/IT_ABI_CAB__c/fields/IT_Short_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>IT_Short_Bank_Name__c</fullName>
    <label>Short Bank Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>