force-app/main/default/objects/IT_ABI_CAB__c/fields/IT_Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Swift_Code__c</fullName>
    <label>Swift Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>