force-app/main/default/objects/IT_ABI_CAB__c/fields/IT_Window__c.field-meta.xml
<CustomField>
    <fullName>IT_Window__c</fullName>
    <label>Window</label>
    <length>30</length>
    <type>Text</type>
</CustomField>